# python-boilerplate-project

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  settings.conf  settings.toml
.github/ISSUE_TEMPLATE/: 4-security-report.md
.github/workflows/: pull_request.yml
src/: main.py
src/config/: settings.py
tests/config/: settings_to_test.conf  test_settings.py
