[tool.poetry]
name = "python-boilerplate-project"
version = "0.1.0"
description = "A python boilerplate project using poetry"
authors = [""]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
pytest-cov = "^3.0.0"
flake8 = "^6.0.0"
black = "^23.3.0"

[tool.pytest.ini_options]
testpaths = ["tests",]

[tool.coverage.run]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.coverage.html]
directory = "htmlcov"

[tool.black]
line-length = 120
target-version = ['py39']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
